practice/NetworkPolicy/backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: demo
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: nginx
