practice/NetworkPolicy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demo
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
